--- a/app/src/main/res/layout-land/content_detail.xml
+++ b/app/src/main/res/layout-land/content_detail.xml
@@ -18,7 +18,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:baselineAligned="false">
 
         <fragment
             android:id="@+id/mapfragment"
@@ -27,17 +28,12 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
-        <LinearLayout
+        <include
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            layout="@layout/detail_content_information"/>
 
-            <TextView
-                android:text="OI"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
