--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.github.ruiadrmartins.locationsearcher.ui.MainActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    <group
+        android:id="@+id/group"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/action_sort_name"
+            android:orderInCategory="100"
+            android:title="@string/action_sort_name"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/action_sort_distance"
+            android:orderInCategory="101"
+            android:title="@string/action_sort_distance"
+            app:showAsAction="never" />
+    </group>
 </menu>
