--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,7 +37,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:listitem="@layout/location_item" />
+            tools:listitem="@layout/location_item"
+            android:visibility="visible"/>
     </com.vlonjatg.progressactivity.ProgressLinearLayout>
 
 </android.support.constraint.ConstraintLayout>
